src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    &,
    &.light-mode {
      --background-app-rgb: 244, 245, 247;
      --color-primary-900: 74, 109, 255;
      --color-primary-800: 92, 124, 255;
      --color-primary-700: 110, 138, 255;
      --color-primary-600: 128, 153, 255;
      --color-primary-500: 146, 167, 255;
      --color-primary-400: 164, 182, 255;
      --color-primary-300: 183, 197, 255;
      --color-primary-200: 201, 211, 255;
      --color-primary-100: 219, 226, 255;
      --color-primary-50: 228, 233, 255;
      --color-secondary-900: 42, 45, 83;
      --color-secondary-800: 63, 66, 100;
      --color-secondary-700: 85, 87, 117;
      --color-secondary-600: 106, 108, 135;
      --color-secondary-500: 127, 129, 152;
      --color-secondary-400: 148, 150, 169;
      --color-secondary-300: 170, 171, 186;
      --color-secondary-200: 191, 192, 203;
      --color-secondary-100: 212, 213, 221;
      --color-secondary-50: 223, 223, 229;
      --color-white: 255, 255, 255;
      --color-black: 0, 0, 0;
      --color-success: 0, 192, 115;
      --color-warning: 255, 153, 0;
      --color-error: 255, 71, 87;
    }
    &.dark-mode {
      --background-app-rgb: 24, 33, 47;
      --color-secondary-900: 223, 223, 2291;
      --color-secondary-800: 212, 213, 221;
      --color-secondary-700: 191, 192, 203;
      --color-secondary-600: 170, 171, 186;
      --color-secondary-500: 148, 150, 169;
      --color-secondary-400: 127, 129, 152;
      --color-secondary-300: 106, 108, 135;
      --color-secondary-200: 85, 87, 117;
      --color-secondary-100: 63, 66, 100;
      --color-secondary-50: 42, 45, 83;
      --color-white: 0, 0, 0;
      --color-black: 255, 255, 255;
    }
  }
}

@layer components {
  .formLayout {
    @apply flex flex-col items-start justify-center gap-2 rounded-lg border border-secondary-200 bg-secondary-50/20 px-4 py-6 shadow-sm sm:min-w-[400];
  }
  .textField {
    @apply flex w-full flex-col gap-y-2;
  }
  .textField__input {
    @apply w-full rounded-xl border border-secondary-100 bg-secondary-100/30 px-4 py-3 text-secondary-900 outline-none transition-all duration-200 ease-in-out hover:border-primary-300 focus:border-primary-300 focus:bg-white focus:shadow-input-focus focus:outline-none;
  }
  .textField--invalid {
    @apply border-error bg-red-50 hover:border-error focus:border-error;
  }
  .btn {
    @apply rounded-xl px-2 py-1 font-bold transition-all duration-300;
  }
  .btn--primary {
    @apply bg-primary-900 px-4 py-3 text-white shadow-md shadow-primary-300 hover:bg-primary-800;
  }
  .btn--secondary {
    @apply bg-secondary-700 px-4 py-3 text-white shadow-md shadow-secondary-300 hover:bg-secondary-800;
  }
  .btn--danger {
    @apply bg-error/90 px-4 py-3 text-white shadow-md shadow-error/40 hover:bg-error;
  }
  .btn--outline {
    @apply border border-primary-900 bg-transparent px-4 py-3 text-primary-900 hover:bg-primary-900 hover:text-white;
  }
  .table__layout {
    @apply overflow-auto rounded-md border border-secondary-200 p-3 shadow-sm [&>table]:w-full [&>table]:min-w-[800px] [&>table]:table-auto [&>table]:border-collapse [&>table]:text-sm;
  }
  .table__th {
    @apply border-b-2 border-b-gray-600 p-3 text-center font-medium;
  }
  .table__td {
    @apply border-b border-b-gray-400 px-3 py-4 text-center;
  }
  .badge {
    @apply whitespace-nowrap rounded-xl px-3 py-1;
  }
  .badge--primary {
    @apply bg-primary-900 text-white;
  }
  .badge--secondary {
    @apply bg-secondary-600 text-white;
  }
  .badge--success {
    @apply bg-success text-white;
  }
  .badge--error {
    @apply bg-error text-white;
  }
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: var(--font-vazir);
  min-height: 100vh;
  user-select: none;
  background-color: var(--background-app-rgb);
}

table tr:last-of-type td {
  border-bottom: none;
}

